--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -27,7 +27,7 @@
                             <!-- </div> -->
                         </div>
                         <div class="col-xs-12 login-btn">
-                            <button class="btn btn-secondary btn-lg btn-block text-uppercase btn-rounded" type="submit">Ingresar</button>
+                            <button class="btn btn-secondary btn-lg btn-block text-uppercase btn-rounded" type="submit" (click)="login()">Ingresar</button>
                         </div>
                         <div class="col-sm-12 text-center">
                             No tienes una cuenta? <a routerLink="/register" class="text-primary m-l-5"><b>Registrarse</b></a>
