--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -30,7 +30,7 @@
                             <button class="btn btn-secondary btn-lg btn-block text-uppercase btn-rounded" type="submit" (click)="login()">Ingresar</button>
                         </div>
                         <div class="col-sm-12 text-center">
-                            No tienes una cuenta? <a routerLink="/register" class="text-primary m-l-5"><b>Registrarse</b></a>
+                            No tienes una cuenta? <a routerLink="/auth/registro" class="text-primary m-l-5"><b>Registrarse</b></a>
                         </div>
                     </div>
                 </form>
