--- a/src/app/general/editar/editar.component.html
+++ b/src/app/general/editar/editar.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <mat-card>
       <div class="content">
-        <h1>Crear publicacion</h1>
+        <h1>Editar publicacion</h1>
       </div>
       <form [formGroup]="form">
         <div class="column">
@@ -26,9 +26,10 @@
           <input class="ng-hide mb-3" id="input-file-id" multiple type="file" />
         </div>
         <div class="row">
-          <button mat-raised-button class="crearBTN" (click)="crear()">Crear</button>
+          <button mat-raised-button class="crearBTN" (click)="crear()">Editar</button>
         </div>
       </form>
     </mat-card>
   </div>
+  
   
